Fix White space at the bottom of the Game screen

--- a/css/treasure.css
+++ b/css/treasure.css
@@ -19,3 +19,7 @@ Jquerymobile help icon
 .path-mod-treasurehunt div.answer label {
   display: inline-block;
 }
+
+div#mappage {
+  box-sizing: unset !important;
+}
